--- a/operator/operator.yaml
+++ b/operator/operator.yaml
@@ -1,6 +1,7 @@
 apiVersion: kudo.dev/v1beta1
-name: "minio-distributed"
-version: "0.1.0"
+name: "minio"
+operatorVersion: "0.3.0"
+kudoVersion: 0.10.0
 kubernetesVersion: 1.16.0
 appVersion: 1.17.6
 maintainers:
@@ -12,16 +13,16 @@ tasks:
     kind: Apply
     spec:
       resources:
-        - minio-distributed-headless-service.yaml
-        - minio-distributed-service.yaml
-        - minio-distributed-statefulset.yaml
+        - minio-headless-service.yaml
+        - minio-service.yaml
+        - minio-statefulset.yaml
   - name: remove
     kind: Delete
     spec:
       resources:
-        - minio-distributed-statefulset.yaml
-        - minio-distributed-headless-service.yaml
-        - minio-distributed-service.yaml
+        - minio-statefulset.yaml
+        - minio-headless-service.yaml
+        - minio-service.yaml
 plans:
   deploy:
     strategy: serial
