--- a/operator/templates/minio-statefulset.yaml
+++ b/operator/templates/minio-statefulset.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   serviceName: minio
   podManagementPolicy: Parallel
-  replicas: 4
+  replicas: {{ .Params.NODE_COUNT }}
   selector:
     matchLabels:
       app: minio # has to match .spec.template.metadata.labels
@@ -22,35 +22,35 @@ spec:
           value: "minio"
         - name: MINIO_SECRET_KEY
           value: "minio123"
-        image: minio/minio:RELEASE.2020-02-07T23-28-16Z
+        image: {{ .Params.NODE_DOCKER_IMAGE }}
         args:
         - server
-        - http://minio-{0...3}.minio.default.svc.cluster.local/data
+        - http://minio-{0...{{ .Params.NODE_COUNT }}}.minio.default.svc.cluster.local/data
         ports:
-        - containerPort: 9000
+        - containerPort: {{ .Params.MINIO_CONTAINER_PORT }}
         # These volume mounts are persistent. Each pod in the PetSet
         # gets a volume mounted based on this field.
         volumeMounts:
         - name: data
-          mountPath: /data
+          mountPath: {{ .Params.MINIO_MOUNT_PATH }}
         # Liveness probe detects situations where MinIO server instance
         # is not working properly and needs restart. Kubernetes automatically
         # restarts the pods if liveness checks fail.
         livenessProbe:
           httpGet:
-            path: /minio/health/live
-            port: 9000
-          initialDelaySeconds: 120
-          periodSeconds: 20
+            path: {{ .Params.MINIO_LIVENESS_PROBE_PATH }}
+            port: {{ .Params.MINIO_CONTAINER_PORT }}
+          initialDelaySeconds: {{ .Params.MINIO_LIVENESS_PROBE_INITIAL_DELAY_SECONDS }}
+          periodSeconds: {{ .Params.MINIO_LIVENESS_PROBE_PERIOD_SECONDS }}
         # Readiness probe detects situations where MinIO server instance
         # is not ready to accept connections. Kubernetes automatically
         # stops all the traffic to the pods if readiness checks fail.
         readinessProbe:
           httpGet:
-            path: /minio/health/ready
-            port: 9000
-          initialDelaySeconds: 120
-          periodSeconds: 20
+            path: {{ .Params.MINIO_READYNESS_PROBE_PATH }}
+            port: {{ .Params.MINIO_CONTAINER_PORT }}
+          initialDelaySeconds: {{ .Params.MINIO_READYNESS_PROBE_INITIAL_DELAY_SECONDS }}
+          periodSeconds: {{ .Params.MINIO_READYNESS_PROBE_PERIOD_SECONDS }}
   # These are converted to volume claims by the controller
   # and mounted at the paths mentioned above.
   volumeClaimTemplates:
